--- a/requirements.yml
+++ b/requirements.yml
@@ -24,6 +24,8 @@ dependencies:
   - cffi=1.17.1=py39h1fdaa30_1
   - charset-normalizer=3.3.2=pyhd3eb1b0_0
   - comm=0.2.1=py39h06a4308_0
+  - contourpy=1.2.1=py39hdb19cb5_1
+  - cycler=0.11.0=pyhd3eb1b0_0
   - cyrus-sasl=2.1.28=h52b45da_1
   - debugpy=1.8.11=py39h6a678d5_0
   - decorator=5.1.1=pyhd3eb1b0_0
@@ -32,6 +34,7 @@ dependencies:
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.6.4=h6a678d5_0
   - fontconfig=2.14.1=h55d465d_3
+  - fonttools=4.55.3=py39h5eee18b_0
   - freetype=2.12.1=h4a9f257_0
   - h11=0.14.0=py39h06a4308_0
   - httpcore=1.0.2=py39h06a4308_0
@@ -40,6 +43,7 @@ dependencies:
   - idna=3.7=py39h06a4308_0
   - importlib-metadata=8.5.0=py39h06a4308_0
   - importlib_metadata=8.5.0=hd3eb1b0_0
+  - importlib_resources=6.4.0=py39h06a4308_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
   - ipykernel=6.29.5=py39h06a4308_1
   - ipython=8.15.0=py39h06a4308_0
@@ -62,11 +66,15 @@ dependencies:
   - jupyterlab_pygments=0.3.0=py39h06a4308_0
   - jupyterlab_server=2.27.3=py39h06a4308_0
   - jupyterlab_widgets=3.0.13=py39h06a4308_0
+  - kiwisolver=1.4.4=py39h6a678d5_0
   - krb5=1.20.1=h143b758_1
+  - lcms2=2.16=h92b89f2_1
   - ld_impl_linux-64=2.40=h12ee557_0
+  - lerc=4.0.0=h6a678d5_0
   - libabseil=20240116.2=cxx17_h6a678d5_0
   - libcups=2.4.2=h2d74bed_1
   - libcurl=8.12.1=hc9e6f67_0
+  - libdeflate=1.22=h5eee18b_0
   - libedit=3.1.20230828=h5eee18b_0
   - libev=4.33=h7f8727e_1
   - libffi=3.4.4=h6a678d5_1
@@ -81,12 +89,16 @@ dependencies:
   - libsodium=1.0.18=h7b6447c_0
   - libssh2=1.11.1=h251f7ec_0
   - libstdcxx-ng=11.2.0=h1234567_1
+  - libtiff=4.7.0=hde9077f_0
   - libuuid=1.41.5=h5eee18b_0
+  - libwebp-base=1.3.2=h5eee18b_1
   - libxcb=1.15=h7f8727e_0
   - libxkbcommon=1.0.1=h097e994_2
   - libxml2=2.13.5=hfdd30dd_0
   - lz4-c=1.9.4=h6a678d5_1
   - markupsafe=3.0.2=py39h5eee18b_0
+  - matplotlib=3.9.2=py39h06a4308_1
+  - matplotlib-base=3.9.2=py39hbfdbfaf_1
   - matplotlib-inline=0.1.6=py39h06a4308_0
   - mistune=3.1.2=py39h06a4308_0
   - mkl=2023.1.0=h213fc3f_46344
@@ -106,6 +118,7 @@ dependencies:
   - numexpr=2.10.1=py39h3c60e43_0
   - numpy=2.0.1=py39h5f9d8c6_1
   - numpy-base=2.0.1=py39hb5e798b_1
+  - openjpeg=2.5.2=h0d4d230_1
   - openldap=2.6.4=h42fbc30_0
   - openssl=3.0.16=h5eee18b_0
   - overrides=7.4.0=py39h06a4308_0
@@ -117,6 +130,7 @@ dependencies:
   - pcre2=10.42=hebb0a14_1
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=11.1.0=py39hac6e08b_1
   - pip=25.0=py39h06a4308_0
   - platformdirs=3.10.0=py39h06a4308_0
   - prometheus_client=0.21.0=py39h06a4308_0
@@ -127,6 +141,7 @@ dependencies:
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.15.1=py39h06a4308_1
+  - pyparsing=3.2.0=py39h06a4308_0
   - pyqt=6.7.1=py39h6a678d5_0
   - pyqt6-sip=13.9.1=py39h5eee18b_0
   - pysocks=1.7.1=py39h06a4308_0
@@ -152,6 +167,7 @@ dependencies:
   - rfc3339-validator=0.1.4=py39h06a4308_0
   - rfc3986-validator=0.1.1=py39h06a4308_0
   - rpds-py=0.22.3=py39h4aa5aa6_0
+  - seaborn=0.13.2=py39h06a4308_2
   - send2trash=1.8.2=py39h06a4308_1
   - setuptools=75.8.0=py39h06a4308_0
   - sip=6.10.0=py39h6a678d5_0
@@ -170,6 +186,7 @@ dependencies:
   - typing-extensions=4.12.2=py39h06a4308_0
   - typing_extensions=4.12.2=py39h06a4308_0
   - tzdata=2025a=h04d1e81_0
+  - unicodedata2=15.1.0=py39h5eee18b_1
   - urllib3=2.3.0=py39h06a4308_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - webencodings=0.5.1=py39h06a4308_1
